src/styles.css
* {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    user-select: none;
    margin: 0;
    padding: 0;
}

.transitionColor {
    transition: background 0.5s ease, color 0.5s ease, background-color 0.5s ease;
}

body {
    background: #f4f7fb;
    color: #773399;
}

.dark {
    background: #001432;
    color: #88CC66;
}

p, h3 {
    margin: 30px;
    justify-self: center;
}

#nightButton, #hamburgerButton {
    width: 50px;
    height: 50px;
    background: none;
    border: none;
    cursor: pointer;
    opacity: 0.6;
}

#nightButton img, #hamburgerIcon {
    width: 100%;
    height: auto;
}

#main {
    animation: fadeIn 0.6s;
}

@keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

.particle {
    width: 8px;
    height: 8px;
    background: #773399;
    border-radius: 50%;    
    pointer-events: none;
    will-change: transform, opacity;
    outline: solid red 0.5px;
}

h1 {
    justify-self: center;
    margin-top: 20px;
}

h6 {
    justify-self: center;
}

li {
    font-weight: 500;
    list-style: none;
}
a {
    border-radius: 10px;
    text-decoration: none;
    color: #773399;
}

#current {
    color: red;
}

#textBackgroundBlur {
    width: 100%;
    height: 200px;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background-color: rgba(171, 205, 255, 0.30);
    backdrop-filter: blur(100px);
    border-radius: 20px;
    z-index: 1;
}

body.dark #textBackgroundBlur {
    background-color: rgba(0, 20, 50, 0.20);
}

ul {
    background-color: #d7e6fa;
    align-items: center; 
    display: flex;
    width: 100vw;
    padding: 20px 0;
    display: flex;
    justify-content: space-evenly;
}

ul div {
    width: 100%;
    background-color: #d7e6fa;
    align-items: center; 
    display: flex;
    justify-content: space-around;
    max-width: 1000px;
}

body.dark ul, body.dark ul div {
    background-color: #002763;
}

body.dark ul div a {
    color: #88CC66;
    white-space: nowrap;
}

body.dark ul #current {
    color: rgb(0, 225, 255);
}

body.dark ul img {
    filter: invert(1);
    opacity: 0.75;
}

#hamburgerButton {
    display: none;
}

.hamburgerMenu {
    width: 100vw;
    height: auto;
    gap: 10px;
    padding-top: 30px;
    padding-bottom: 30px;
    display: flex;
    flex-direction: column;
    position: fixed;
    left: 50vw;
    transform: translate(-50%);
    top: 100px;
    font-size: 30px;
    z-index: 1;
}

#timelineLine {
    margin-top: 150px;
    margin-left: 40px;
    margin-right: 40px;
    height: 0px;
    border-radius: 100px;
    border: 3px solid #773399;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

@media (max-width: 630px){
    .navbar > div > li > a {
        visibility: hidden;
        font-size: 14px;
    }
    #hamburgerButton {
        display: block;
    }
    #timelineLine {
        margin-top: 10vh;
        flex-direction: column;
        position: relative;
        width: 0px;
        height: 60vh !important;
        border-radius: 100px;
        border: 3px solid #773399;
        display: flex;
        justify-content: space-between;
        align-items: center;
        position: fixed;
        left: 50vw;
        transform: translate(-7.5vw);
    }
}
@media (min-width: 631px) {
    .hamburgerMenu {
        display: none !important;
    }
}

.timelineDot {
    height: clamp(50px, 7.5vw, 80px);
    width: clamp(50px, 7.5vw, 80px);
    border-radius: 30px;
    transition: scale 0.6s;
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    
}

.timelineText {
    width: 15vw;
    font-size: clamp(1px, 1.5vw, 20px);
}

.timelineImage {
    width: 100%;
    height: 100%;
    border-radius: 50%;
}

.timelineDot:hover {
    scale: 1.4;
}

#dot1{
    animation-name: timelineButtonAppear;
    animation-duration: 1s;
}
#dot2 {
    animation-name: timelineButtonAppear;
    animation-duration: 1s;
    animation-delay: 0.5s;
}
#dot3 {
    animation-name: timelineButtonAppear;
    animation-duration: 1s;
    animation-delay: 1s;
}
#dot4 {
    animation-name: timelineButtonAppear;
    animation-duration: 1s;
    animation-delay: 1.5s;
}

.timelineButton {
    width: 100%;
    height: 100%;
    border-radius: 50%;
    padding: 0;
    border: none;
    cursor: pointer;
}

.timelineDot {
    transform: scale(0);
    animation-fill-mode: forwards;
}

@keyframes timelineButtonAppear {
    from {
        transform: scale(0);
    }
    to {
        transform: scale(1);
    }
}

.backgroundBlurHidden {
    background: none !important;
}

.hidden {
    display: none !important;
}

.backgroundGlow {
    z-index: -1;
}

.growingBox {
    position: fixed;
    opacity: 0.8;
    filter: blur(150px);
}
#extrasButton {
    height: 100px;
    width: 200px;
    font-size: 30px;
    position: fixed;
    color: #773399;
    background-color: #d7e6fa;
    border: 10px solid #b7c4d4;
    border-radius: 10px;
    left: 50vw;
    top: 50vh;
    transform: translate(-50%, -50%);
}
body.dark #extrasButton {
    height: 100px;
    width: 200px;
    font-size: 30px;
    position: fixed;
    color: #88CC66;
    background-color: #003380;
    border: 10px solid #002a68;
    border-radius: 10px;
    left: 50vw;
    top: 50vh;
    transform: translate(-50%, -50%);
}

button:hover, a:hover {
    cursor: pointer;
    filter: drop-shadow(0 0 10px #b77cff);
}

body.dark button:hover, body.dark a:hover {
    filter: drop-shadow(0 0 10px #d1eaff)
}

.spin {
    animation: spinClick 0.5s ease;
}

@keyframes spinClick {
    from {
        transform: scale(1);
    }
    to {
        transform: scale(1) rotate(360deg);
    }
}

#extras {
    position: fixed;
    pointer-events: none;
}

#extras #box1{
    height: 800px;
    width: 800px;
    top: 5%;
    left: 5%;
    background-color: #4dc7ff;
    transition: scale 0.8s ease-in-out;
}

#extras #box2{
    height: 700px;
    width: 1200px;
    top: 50%;
    right: -2%;
    background-color: #4ce027;
    transition: scale 1s ease-in-out;
}

#extras #box3{
    height: 700px;
    width: 700px;
    bottom: 30%;
    left: 60%;
    background-color: #ff2525;
    transition: scale 0.6s ease-in-out;
}

body.dark #extras #box1{
    height: 800px;
    width: 800px;
    top: 5%;
    left: 5%;
    background-color: #46b2e4;
    transition: scale 0.8s ease-in-out;
}

body.dark #extras #box2{
    height: 700px;
    width: 1200px;
    top: 50%;
    right: -2%;
    background-color: #41be21;
    transition: scale 1s ease-in-out;
}

body.dark #extras #box3{
    height: 700px;
    width: 700px;
    bottom: 30%;
    left: 60%;
    background-color: #d82020;
    transition: scale 0.6s ease-in-out;
}


#tamilNaduPicture {
    width: 50vw;
    height: auto;
}

footer {
text-align: center;
margin-top: 100px;
opacity: 0.6;   
}

